WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181568
Star character disappears when bolded
https://bugs.webkit.org/show_bug.cgi?id=181568
Summary
Star character disappears when bolded
Myles C. Maxfield
Reported
2018-01-11 17:35:54 PST
Star character disappears when bolded
Attachments
Patch
(5.90 KB, patch)
2018-01-11 17:40 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2018-01-11 17:39:58 PST
<
rdar://problem/18755569
>
Myles C. Maxfield
Comment 2
2018-01-11 17:40:41 PST
Created
attachment 331144
[details]
Patch
WebKit Commit Bot
Comment 3
2018-01-11 19:16:57 PST
Comment on
attachment 331144
[details]
Patch Clearing flags on attachment: 331144 Committed
r226839
: <
https://trac.webkit.org/changeset/226839
>
WebKit Commit Bot
Comment 4
2018-01-11 19:16:59 PST
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 5
2018-01-11 20:19:37 PST
***
Bug 181567
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug